# k2s-Downloaderm

./: .claudeprompt  .gitignore  AGENTS.md  CONTRIBUTING.md  Readme.md  build_exe.bat  k2s_gui.spec  pyproject.toml  readme-en.md  readme-zh.md  requirements-en.md  requirements-zh.md  todolist.md
.github/scripts/: ai_review.py  test_ai_review.py
.github/workflows/: ai-review.yml  ci.yml
docs/: README.md
docs/ai/: HANDOFF.md  architecture.md  requirements.md  todolist.md
docs/ai/todolist-archive/: round-1-p0-p5.md
docs/human/: architecture.md  requirements.md
src/k2s_downloader/: cli.py
src/k2s_downloader/core/: downloader.py  k2s_client.py  proxy.py
src/k2s_downloader/gui/: app.py  main_window.py  paths.py  worker.py
tests/: test_downloader_concurrency_races.py  test_downloader_error_handling.py  test_downloader_filename_and_paths.py  test_downloader_proxy_degradation.py  test_downloader_resume_and_streaming.py  test_downloader_retry_limit.py  test_downloader_status_code.py  test_downloader_throughput_telemetry.py  test_downloader_timeouts.py  test_downloader_units_and_ranges.py  test_downloader_whole_download_retry.py  test_human_readable_bytes.py  test_k2s_client_blocked.py  test_k2s_client_timeouts.py  test_proxy_pool_quality.py  test_proxy_preference_and_cache.py
