[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "k2s-downloader"
version = "1.0.0"
description = "Keep2Share downloader with CLI and PySide6 GUI"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "tqdm",
    "Pillow",
    "requests-futures",
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
build = [
    "pyinstaller>=6.16.0",
]

[project.scripts]
k2s-downloader = "k2s_downloader.cli:main"
k2s-downloader-gui = "k2s_downloader.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow running `pytest` against the src layout without installing the
# package first (CI still does an editable install to validate packaging).
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["src/k2s_downloader.egg-info"]